--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: debian-latest
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
