update: add worker config to env

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ SQLALCHEMY_DATABASE_URL="sqlite:///./api.db"
 # Make sure to update the below settings with correct user/password and database address.
 #---------------------------------------------------------------------------------------#
 # SQLALCHEMY_DATABASE_URL="postgresql://user:password@postgresserver/db"
+CELERY_CONF_BROKER_URL="redis://localhost:6379"
+CELERY_CONF_RESULT_BACKEND="redis://localhost:6379"
