feature: [#3] CORS config

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,20 @@
+# Database Config
 SQLALCHEMY_DATABASE_URL="sqlite:///./api.db"
 #---------------------------------------------------------------------------------------#
 # To use PostgreSQL Database comment the above line and uncomment the line below.
 # Make sure to update the below settings with correct user/password and database address.
 #---------------------------------------------------------------------------------------#
 # SQLALCHEMY_DATABASE_URL="postgresql://user:password@postgresserver/db"
+
+# Celery Config
 CELERY_CONF_BROKER_URL="redis://localhost:6379"
 CELERY_CONF_RESULT_BACKEND="redis://localhost:6379"
+
+# CORS Config
+ALLOWED_ORIGINS='["http://localhost","http://localhost:8000"]'
+ALLOW_CREDENTIALS=True
+ALLOW_METHODS='["*"]'
+ALLOW_HEADERS='["*"]'
+
+# App Config
+APP_DEBUG=True
