--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint pytest
-        if ( -f requirements.txt ); then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
     - name: Lint with pylint
       run: |
         pylint --recursive=y api --rcfile=.pylintrc
