update: requirements package versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi
-uvicorn[standard]
-sqlalchemy
-pylint
-loguru
-celery
-redis
-pytest
-httpx
+fastapi==0.88.0
+uvicorn[standard]==0.20.0
+sqlalchemy==1.4.45
+pylint==2.15.9
+loguru==0.6.0
+celery==5.2.7
+redis==4.4.0
+pytest==7.2.0
+httpx==0.23.1
