--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ SQLALCHEMY_DATABASE_URL="sqlite:///./api.db"
 # SQLALCHEMY_DATABASE_URL="postgresql://user:password@postgresserver/db"
 
 # Celery Config
+MONGODB_URL="mongodb://localhost:27017"
+MONGODB_NAME="fastapi"
 CELERY_CONF_BROKER_URL="redis://localhost:6379"
 CELERY_CONF_RESULT_BACKEND="redis://localhost:6379"
 
