update workflow permissions

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,6 +11,7 @@ on:
 
 permissions:
   contents: read
+  actions: read|write
 
 jobs:
   build:
@@ -44,6 +45,5 @@ jobs:
           fetch-depth: 2
       - uses: salsify/action-detect-and-tag-new-version@v2
         with:
-          github_token: ${{ secrets.REPO_TOKEN }}
           version-command: |
             cat VERSION
