--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,6 +42,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
+          github_token: ${{ secrets.REPO_TOKEN }}
           fetch-depth: 2
       - uses: salsify/action-detect-and-tag-new-version@v2
         with:
