--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,12 +42,12 @@ jobs:
     needs: [build]
     steps:
       - name: Get repo
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
         with:
           token: ${{ secrets.REPO_TOKEN }}
           fetch-depth: 2
       - name: Apply tag
-      - uses: salsify/action-detect-and-tag-new-version@v2
+        uses: salsify/action-detect-and-tag-new-version@v2
         id: repo-tag
         with:
           version-command: |
