update changelog step

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -57,5 +57,5 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           branch: main
-          commit_message: 'docs: update CHANGELOG.md for ${{ github.ref_name }} [skip ci]'
+          commit_message: 'docs: update CHANGELOG.md'
           file_pattern: CHANGELOG.md
