--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -52,7 +52,8 @@ jobs:
         with:
           version-command: |
             cat VERSION
-      - name: Get the tag output
+      - name: Update CHANGELOG
+        uses: dangoslen/changelog-enforcer@v3
         if: ${{ steps.repo-tag.outputs.tag }}
         run: |
           echo '${{ steps.repo-tag.outputs.tag }}'
