add branch in changelog step

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -60,3 +60,5 @@ jobs:
       - name: commit CHANGELOG
         if: ${{ steps.repo-tag.outputs.tag }}
         uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          branch: main
