--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -52,13 +52,26 @@ jobs:
         with:
           version-command: |
             cat VERSION
-      - name: Update CHANGELOG
+      - name: Get Tag
         if: ${{ steps.repo-tag.outputs.tag }}
+        run: |
+          echo ${{ steps.repo-tag.outputs.tag }}
+
+  update-changelog:
+    runs-on: ubuntu-latest
+    needs: [tag-new-versions]
+    steps:
+      - name: Get repo
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.REPO_TOKEN }}
+          fetch-depth: 0
+      - name: Update CHANGELOG
         run: |
           rm CHANGELOG.md
           bash git-changelog.sh > CHANGELOG.md
       - name: commit CHANGELOG
-        if: ${{ steps.repo-tag.outputs.tag }}
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           branch: main
+          commit_message: Automatic CHANGELOG Update
