--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Update CHANGELOG
         run: |
           rm CHANGELOG.md
-          git pull
+          git pull origin main
           bash git-changelog.sh > CHANGELOG.md
       - name: commit CHANGELOG
         uses: stefanzweifel/git-auto-commit-action@v4
