--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,6 +38,7 @@ jobs:
         pytest api/
 
   tag-new-versions:
+    id: repo-tag-new-versions
     runs-on: ubuntu-latest
     needs: [build]
     steps:
@@ -73,6 +74,7 @@ jobs:
           bash git-changelog.sh > CHANGELOG.md
       - name: commit CHANGELOG
         uses: stefanzweifel/git-auto-commit-action@v4
+        if: ${{ jobs.repo-tag-new-versions.steps.repo-tag.outputs.tag }}
         with:
           branch: main
           commit_message: Automatic CHANGELOG Update
